# store-api

./: .env  .gitignore  alembic.ini  docker-compose.yaml  dockerfile  makefile  pyproject.toml
backend/: .dockerignore  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 77c2bc2b6614_add_datetime_and_update_tags.py  a9bbdd4a740d_add_products.py
backend/src/: main.py  router.py
backend/src/apps/: __init__.py
backend/src/apps/products/: admin_router.py  models.py  public_router.py  schemas.py  service.py
backend/src/core/: db.py  utils.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: categories.jsx  products.jsx
frontend/src/components/: ProductCard.jsx
frontend/src/pages/: AdminProducts.jsx  Product.jsx  Products.jsx
migrations/: env.py
migrations/versions/: d0fab79a2b55_add_products_table.py
src/: main.py  router.py
src/apps/health/: router.py
src/apps/products/: models.py
src/core/: exceptions.py  middleware.py  settings.py
